Convert `Request` classes to Java records in emitter and test. (#584)